--- a/makefile-d-sample
+++ b/makefile-d-sample
@@ -2,7 +2,7 @@ DMD=dmd
 DFLAGS=-gc -debug -w -unittest
 DLDFLAGS=-of$(EXE) -L-ldl
 EXE=samples_d
-LIBSRC=tcod/base.d tcod/types.d tcod/functions.d SDL/video.d
+LIBSRC=tcod/all.d tcod/types.d tcod/functions.d SDL/video.d
 
 $(EXE) : samples_d.d $(LIBSRC)
 	$(DMD) samples_d.d $(LIBSRC) $(DFLAGS) $(DLDFLAGS)
